@@ -1,3 +1,8 @@
+2015-06-02  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* operation/inventories/inventory_detail.php: Fixed
+	bug updating inventory. Ticket #2297.
+
 2015-06-01  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* include/functions_incidents.php: Added fields
